feat: add security to swagger docs
