# src/routes/containers/transactions.ts
@@ -1,8 +1,8 @@
-import Transaction, { TransactionModelType } from "../../schemas/transaction.schema";
+import Transaction, { TransactionModelType } from "../schemas/transaction.schema";
 import { container } from "tsyringe";
 import TransactionsService from "../../services/transactions/transactions.service";
 import TransactionsController from "../../controllers/transactions/transactions.controller";
-import Account, { AccountModelType } from "../../schemas/accounts.schema";
+import Account, { AccountModelType } from "../schemas/accounts.schema";
 import mongoose, { Connection } from "mongoose";
 
 //container registration
